src/objects/Non_HCP_Clear_Down_Object_MERC__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Indicates an object that needs to be set for &quot;clear down&quot; when a meeting is closed. &quot;Clear down&quot; involves removal of any personal information and will be handled by workflow rules.</description>
    <fields>
        <fullName>Clear_Down_Flag_Name_MERC__c</fullName>
        <description>The api name of the boolean field which triggers the workflows to clear the information from the record.</description>
        <label>Clear Down Flag Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Participant_is_Child_Object_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the Meeting Participant object is a child of the configured object. i.e. there is a lookup from the meeting participant to the object.</description>
        <inlineHelpText>Indicates the Meeting Participant object is a child of the configured object. i.e. there is a lookup from the meeting participant to the object.</inlineHelpText>
        <label>Meeting Participant is Child Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Participant_Relationship_Field_MERC__c</fullName>
        <description>The api name of the lookup field which relates to the meeting participant object.</description>
        <inlineHelpText>The api name of the lookup field which relates to the meeting participant object.</inlineHelpText>
        <label>Participant Relationship Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Non-HCP Clear-Down Object</label>
</CustomObject>